--- a/css/horaire.css
+++ b/css/horaire.css
@@ -19,7 +19,7 @@ main {
 }
 
 #titreHeader {
-    background-image: url(../images/Bannière.avif);
+    background-image: url(../images/bannière.avif);
     height: 4ch;
     font-size: 1.5em;
     color: white;
