--- a/css/sources.css
+++ b/css/sources.css
@@ -8,7 +8,7 @@ html body {
 }
 
 #titreHeader {
-    background-image: url(../images/Bannière.avif);
+    background-image: url(../images/bannière.avif);
     height: 4ch;
     font-size: 1.5em;
     color: white;
