--- a/css/horaire.css
+++ b/css/horaire.css
@@ -8,7 +8,7 @@ html body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background-color: lightcyan;
+    background-color: lightblue;
     font-family: Arial, Tahoma, sans-serif;
 }
 
