--- a/css/horaire.css
+++ b/css/horaire.css
@@ -132,7 +132,7 @@ footer {
 }
 
 #Section2cours {
-    background-color: lightcyan;
+    background-color: lightblue;
     display: grid;
     grid-template-columns: 1fr;
 }
